--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.0.3",
     "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.render-pipelines.universal": "12.1.11",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
